# vibe-iterator

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  memory.md  pyproject.toml  vibe-iterator.config.yaml.example
.github/workflows/: ci.yml  release.yml  vibe-iterator-e2e.yml
docs/: ADDING_SCANNERS.md  CONFIG.md  DASHBOARD.md  ENGINE.md  PHASES.md  SCANNERS.md  STACK.md  STANDARDS.md
examples/github-actions/: vibe-iterator-scan.yml
scripts/: check_scanner_exposure.py
tests/: conftest.py  test_api_inventory.py  test_cli.py  test_cli_scaffold.py  test_config.py  test_config_sidecar.py  test_engine_firebase_registration.py  test_history.py  test_phase8_scanner_registration.py  test_scaffold.py  test_scanner_exposure_matrix.py
tests/e2e/: e2e-stability-log.json  test_real_browser_smoke.py
tests/fixtures/: test_vulnerable_app_fixture.py
tests/test_crawler/: test_browser_auth_navigator.py
tests/test_docs/: test_ci_workflow.py  test_encoding.py
tests/test_engine/: test_api_inventory_integration.py  test_discover_result_serialization.py  test_discover_stage_routing.py  test_runner.py
tests/test_evidence/: test_collector.py
tests/test_listeners/: test_console.py  test_network.py  test_storage.py
tests/test_report/: test_generator.py  test_prompt_builder.py
tests/test_scanners/: test_api_exposure.py  test_api_exposure_proof.py  test_api_key_exposure.py  test_auth_check_proof.py  test_base.py  test_bucket_limits.py  test_client_tampering.py  (+28 more)
vibe_iterator/: api_inventory.py  cli.py  config.py  history.py  scaffold.py
(+103 files in other folders)
