[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-iterator"
version = "0.1.0"
description = "Runtime security testing for vibe-coded web apps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "testing", "supabase", "selenium", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "selenium>=4.15.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "httpx>=0.26.0"]

[project.scripts]
vibe-iterator = "vibe_iterator.cli:cli"

[project.urls]
Homepage = "https://github.com/francisN21/vibe-iterator"
Issues = "https://github.com/francisN21/vibe-iterator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibe_iterator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
